--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html>
 	<head> 
  <STYLE> 
+ body {
+	background-color: black;
+ }
+ 
+ body div {
+	margin: auto;
+ }
+ 
  sup {
 	top: -0.4em;
 	vertical-align: baseline;
@@ -24,7 +32,7 @@ a:visited {text-decoration:none;}
 .stl_02 {
 	height: 70.16666em;
 	font-size: 1em;
-	margin: 0em;
+	margin: auto;
 	line-height: 0.0em;
 	display: block;
 	border-style: none;
